<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/playback_controller_padding"
    tools:context="cn.blcstudio.easyplayer.ui.PlaybackFragment">

    <ImageView
        android:id="@+id/album_art"
        android:src="@drawable/default_album"
        android:layout_width="@dimen/playback_controller_albumart_size"
        android:layout_height="@dimen/playback_controller_albumart_size"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/content_desc_album_art"
        android:scaleType="centerCrop"
        android:layout_centerVertical="true"
        android:background="?android:selectableItemBackground"
        android:transitionName="transition_album_cover"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/playback_controller_albumart_horizontal_margin"
        android:orientation="vertical"
        android:layout_toEndOf="@id/album_art"
        android:layout_toStartOf="@+id/play_next"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/title"
            android:text="I Love WYQ as a song has a long long name"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"/>

        <TextView
            android:id="@+id/artist"
            android:text="JSF as a singer has a long long name"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/extra_info"
            android:text="casting to MyCast"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/play_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/playback_button_padding"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/next"
        android:tint="@color/accent_material_light"
        android:layout_centerVertical="true"
        android:contentDescription="@string/content_desc_next"
        android:layout_toStartOf="@+id/play_queue" />

    <ImageButton
        android:id="@+id/play_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/playback_button_padding"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/list_play"
        android:tint="@color/accent_material_light"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/content_desc_play_queue" />

</RelativeLayout>